--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-    <!-- <div id="modal-wrapper">
+    <main>
+        <nav id="navbar">
+
+        </nav>
+
+        <!-- <div id="modal-wrapper">
         <div id="modal" class="border">
             <p>This website does not use cookies 🍪, by clicking below you are not allowing anything</p>
             <div class="modal-controls">
@@ -19,9 +24,8 @@
             </div>
         </div>
     </div> -->
-    <div class="container crt-scanlines">
         <!-- Add this inside the body tag -->
-        <section class="hero-wrapper">
+        <section id="hero" class="hero-wrapper" data-title="🩸">
             <div id="hero-grid"></div>
 
             <div class="hero-bg">
@@ -30,7 +34,7 @@
             </div>
 
         </section>
-        <section data-title="The Internet of people 🗣️">
+        <section id="internet" data-title="The Internet of people 🗣️">
             <h2>The Internet of people 🗣️</h2>
             <p class="textbox">In our fully digitalised corporate-led world, Data has become the biggest source of
                 power.
@@ -40,7 +44,8 @@
                 in
                 which to have better (and most likely free) services we pay with our personal information.
             </p>
-            <p class="textbox">To understand the magnitude of this exchange of information we can see how the worldwide
+            <p class="textbox">To understand the magnitude of this exchange of information we can see how the
+                worldwide
                 internet
                 adoption
                 has changed in the last 25 years.</p>
@@ -49,24 +54,28 @@
                 <div id="line_chart" class="chart graph_placeholder sticky background"></div>
                 <p class="textbox foreground ">In just three decades the number of people connected to the
                     internet went from from
-                    basically zero to almost 5 billion. Phones, Tablets, and Personal Computers (and also Fridges) now
+                    basically zero to almost 5 billion. Phones, Tablets, and Personal Computers (and also Fridges)
+                    now
                     allow
                     us to exist (and potentially be exposed) in the digital realm.</p>
             </div>
             <p class="textbox quote">Personal data is often compared to oil — it powers today’s most profitable
                 corporations, just like fossil fuels energized those of the past. <br> - Wired</p>
-            <p class="textbox">Despite being submerged in this data-exchanging network we rarely know what data we give
+            <p class="textbox">Despite being submerged in this data-exchanging network we rarely know what data we
+                give
                 away, and where that data ends up.</p>
         </section>
-        <section class="pizza">
+        <section id="pizza" class="pizza" data-title="Pizza Time 🍕">
             <!-- Make Sticky section with 6 paragraphs and a counter going from 1 to 6 while the paragraphs appear -->
             <h2 class="">Pizza Time 🍕</h2>
-            <p class="textbox">In an article, the Wall Street Journal showed how much potential data we give away during
+            <p class="textbox">In an article, the Wall Street Journal showed how much potential data we give away
+                during
                 a simple movie and pizza night, some data are directly provided from us to the companies<span
                     class="circle direct">ai</span>, and others
                 (the vast majority) are additionally collected<span class="circle additional">ai</span>.</p>
             </p>
-            <p class="textbox">[Move your mouse over the dots to precisely see what kinds of data are being collected]
+            <p class="textbox">[Move your mouse over the dots to precisely see what kinds of data are being
+                collected]
 
             <div class="col-wrapper">
                 <div class="col">
@@ -74,7 +83,8 @@
                         <h3 class="pizza-title">Planning 📱</h3>
                         <p>
                             Two friends plan the night through
-                            <strong>Apple's iMessage</strong>. Messages are encrypted, so Apple never knows the words
+                            <strong>Apple's iMessage</strong>. Messages are encrypted, so Apple never knows the
+                            words
                             exchanged, but it can use other anonymous metadata to optimize server bandwidth.
                         </p>
                     </div>
@@ -98,7 +108,8 @@
                             She access the app using an
                             <strong>
                                 Amazon Echo,
-                            </strong> that creates a log of the interactions and records details about the user’s voice.
+                            </strong> that creates a log of the interactions and records details about the user’s
+                            voice.
                         </p>
                     </div>
                     <div class=" pizza-text" id="pizza-04" data-value="3">
@@ -121,8 +132,10 @@
                             <strong>
                                 Facebook,
                             </strong>
-                            automatically recognizing the faces. This is a feature that they choose to enable, while as
-                            additional info Meta collects a bunch of the phone’s metadata, especially the ones related
+                            automatically recognizing the faces. This is a feature that they choose to enable, while
+                            as
+                            additional info Meta collects a bunch of the phone’s metadata, especially the ones
+                            related
                             to
                             location, in order to suggest nearby events.
                         </p>
@@ -163,9 +176,10 @@
             </div>
         </section>
 
-        <section data-title="Policies">
+        <section id="regulation" data-title="Data Regulation 🧑‍⚖️">
             <h2>Data Regulation 🧑‍⚖️</h2>
-            <p class="textbox">Between us and the companies and organizations collecting our data, there are countries
+            <p class="textbox">Between us and the companies and organizations collecting our data, there are
+                countries
                 and policymakers. The deliberate use of our data by third parties is regulated by country-based
                 legislation. According to the UN, out of 194 countries, 137 have legislation to secure data privacy.
             </p>
@@ -177,14 +191,15 @@
             </div>
         </section>
 
-        <section data-title="Data Breaches">
+        <section id="breaches" data-title="Data Breaches 📉">
             <h2>Data Breaches 📉</h2>
             <p class="textbox">A
                 <strong>
                     data breach
                 </strong>
                 is defined as any security incident in which unauthorized parties gain
-                access to sensitive or confidential information, including personal data (Social Security numbers, bank
+                access to sensitive or confidential information, including personal data (Social Security numbers,
+                bank
                 account numbers, healthcare data) or corporate data (customer data records, intellectual property,
                 financial information). [IBM]
             </p>
@@ -214,7 +229,7 @@
                 <!-- <p>Links: <span id="links"></span></p> -->
             </div>
         </section>
-        <section class="h-screen" data-title="Conclusion">
+        <section id="conclusion" class="h-screen" data-title="Conclusion">
             <h2>In big tech, we trust (?)</h2>
             <p class="textbox">
                 When dealing with data online, we have to consider two main factors:
@@ -227,7 +242,7 @@
                 </strong>
             </p>
         </section>
-        <section data-title="Conclusion">
+        <section>
             <div class="value-scroll">
                 <h2 class="pizza-title">Value 💰</h2>
                 <p id="counter" class="huge-text sticky background">
@@ -242,23 +257,28 @@
                     average cost of a Data Breach is 4.45 Million dollars.
                 </p>
                 <p class="counter-text  textbox foreground margin-top-half-screen">
-                    That's what your data is worth. It seems like we are talking about stock market values, with NASDAQ,
+                    That's what your data is worth. It seems like we are talking about stock market values, with
+                    NASDAQ,
                     Nikkei, or BitCoin gaining or losing value over time. But we are not.
                 </p>
                 <p class="counter-text  textbox foreground margin-top-half-screen" data-index="2">
-                    This does not apply to private companies only; as I’m writing this article, on May 14th, 2024, The
+                    This does not apply to private companies only; as I’m writing this article, on May 14th, 2024,
+                    The
                     City of Helsinki’s educational and training departments were victims of a major data breach that
                     potentially stole around 120.000 data belonging to pupils, guardians, and city employees. </p>
                 <p class="counter-text  textbox foreground margin-top-half-screen">
-                    These data are sold and resold to data brokers, firms that store huge amounts of data to be resold
+                    These data are sold and resold to data brokers, firms that store huge amounts of data to be
+                    resold
                     to marketers, investors, advertising companies, or privates.
-                    This can lead to various uses of one’s data: from extremely targeted advertising to more toxic and
-                    dangerous practices, such as Doxing: the unavailing of someone’s private and sensible information,
+                    This can lead to various uses of one’s data: from extremely targeted advertising to more toxic
+                    and
+                    dangerous practices, such as Doxing: the unavailing of someone’s private and sensible
+                    information,
                     such as the home address. </p>
             </div>
         </section>
 
-        <section data-title="Conclusion">
+        <section>
             <h2 class="pizza-title">Reputation 💃</h2>
             <p class="textbox">
                 This leads us to our reputation era.
@@ -321,35 +341,37 @@
 
             </div>
         </section>
-        <footer>
-            <div>
-                <p>References</p>
-                <ul>
-                    <li><a href="https://www.wsj.com/graphics/how-pizza-night-can-cost-more-in-data-than-dollars/">How
-                            Pizza Night Can Cost More in Data Than Dollars</a></li>
-                    <li><a href="">Article 1</a></li>
-                    <li><a href="">Article 1</a></li>
-                    <li><a href="">Article 1</a></li>
-                    <li><a href="">Article 1</a></li>
-                </ul>
-            </div>
-            <div>
-                <p>Datasets</p>
-                <ul>
-                    <li><a href="">Data 1</a></li>
-                    <li><a href="">Data 1</a></li>
-                    <li><a href="">Data 1</a></li>
-                    <li><a href="">Data 1</a></li>
-                    <li><a href="">Data 1</a></li>
-                </ul>
-            </div>
-            <div>
-                <p>Information Design 2024</p>
-                <p>Aalto University</p>
-                <p>Made by <a href="https://www.alessiobrioschi.it/">Alessio Brioschi</a></p>
-            </div>
-        </footer>
-    </div>
+    </main>
+
+    <footer>
+        <div>
+            <p>References</p>
+            <ul>
+                <li><a href="https://www.wsj.com/graphics/how-pizza-night-can-cost-more-in-data-than-dollars/">How
+                        Pizza Night Can Cost More in Data Than Dollars</a></li>
+                <li><a href="">Article 1</a></li>
+                <li><a href="">Article 1</a></li>
+                <li><a href="">Article 1</a></li>
+                <li><a href="">Article 1</a></li>
+            </ul>
+        </div>
+        <div>
+            <p>Datasets</p>
+            <ul>
+                <li><a href="">Data 1</a></li>
+                <li><a href="">Data 1</a></li>
+                <li><a href="">Data 1</a></li>
+                <li><a href="">Data 1</a></li>
+                <li><a href="">Data 1</a></li>
+            </ul>
+        </div>
+        <div>
+            <p>Information Design 2024</p>
+            <p>Aalto University</p>
+            <p>Made by <a href="https://www.alessiobrioschi.it/">Alessio Brioschi</a></p>
+        </div>
+    </footer>
+
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <!-- <script src="https://unpkg.com/@rive-app/canvas@2.10.3"></script> -->
     <!-- <script src="simulation.js"></script> -->
