Does grid work on mobile?

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
         <!-- Add this inside the body tag -->
         <section id="hero" class="hero-wrapper" data-title="" data-emoji="🩸">
-            <!-- <div id="hero-grid"></div> -->
+            <div id="hero-grid"></div>
 
             <div class="hero-bg">
                 <h1>Will there be blood? <span>🩸</span></h1>
