--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
 
         <nav id="navbar">
-
+            <a href="/about.html">About</a>
         </nav>
         <!-- Add this inside the body tag -->
         <section id="hero" class="hero-wrapper" data-title="" data-emoji="🩸">
@@ -354,7 +354,10 @@
                 </div>
                 <div class="tip">
                     <p class="emoji">️📜</p>
-                    <p class="tip-content">Use the GDPR Right to be Forgotten https://gdpr-info.eu/art-17-gdpr/
+                    <p class="tip-content">Use the
+                        <a href="https://gdpr-info.eu/art-17-gdpr/" target="_blank" rel="noopener noreferrer">
+                            GDPR Right to be Forgotten
+                        </a>
                     </p>
                 </div>
                 <div class="tip">
