--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Data Breaches</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="assets/img/favicon/favicon.png" type="image/x-icon">
+
 </head>
 
 <body>
@@ -23,7 +24,9 @@
     <main>
 
         <nav id="navbar">
-            <a href="/about.html">About</a>
+            <ul id="nav_list">
+
+            </ul>
         </nav>
         <!-- Add this inside the body tag -->
         <section id="hero" class="hero-wrapper" data-title="" data-emoji="🩸">
