Added initial banner

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-- <div id="modal-wrapper">
+    <div id="modal-wrapper">
         <div id="modal" class="border">
             <p>This website does not use cookies 🍪, by clicking below you are not allowing anything</p>
             <p>[But for now the website is optimized for desktop visualization, so please watch it there]</p>
@@ -20,7 +20,7 @@
                 <button class="input" id="modalDeny" onclick="hideModal()">Deny</button>
             </div>
         </div>
-    </div> -->
+    </div>
     <main>
 
         <nav id="navbar">
