--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
         </nav>
         <div id="layout">
 
-            <div class="navigation">
+            <!-- <div class="navigation">
                 <ul id="pp_list">
 
                 </ul>
-            </div>
+            </div> -->
             <div id="markdown">
                 <zero-md src="assets/text/docs.md">
                     <template>
@@ -34,27 +34,62 @@
                         <style>
                             h1 {
                                 font-family: "Hack", "Courier New", Courier, monospace;
-                                margin-top: 2rem;
+                                margin-top: 3rem;
                                 margin-bottom: 1rem;
                             }
 
                             h2 {
                                 text-align: left;
-                                margin-top: 1rem;
+                                margin-top: 1.5rem;
                                 margin-bottom: .5rem;
                             }
 
                             h3 {
-                                margin: 0;
+                                margin-bottom: 0;
+                                margin-top: .5rem;
                             }
+
+                            p {
+                                font-size: 1rem;
+                                /* 16px */
+                                line-height: 1.5rem;
+                                /* 24px */
+                            }
+
+                            li+li {
+                                padding-top: 10px;
+                            }
+
+                            img {
+                                max-width: 100%;
+                            }
+
 
                             a {
                                 color: #000;
                             }
 
-                            #markdown {
-                                margin: 2rem;
+                            table {
+                                display: block;
+                                max-width: -moz-fit-content;
+                                max-width: fit-content;
+                                margin: 0 auto;
+                                overflow-x: auto;
+                                white-space: nowrap;
                             }
+
+                            pre {
+                                padding: 1rem;
+                                background-color: lightgrey;
+                            }
+
+                            code {
+                                display: inline-block;
+                                width: 100%;
+                                overflow-x: scroll;
+                            }
+
+
 
                             /* 
                         tr {
@@ -94,12 +129,13 @@
 </body>
 
 <style>
-    #layout {
-        display: flex;
+    main {
+        max-width: 960px;
+        margin-bottom: 3rem;
     }
 
-    main {
-        margin-bottom: 3rem;
+    #markdown {
+        max-width: 90vw;
     }
 </style>
 <script src="scripts/footer.js"></script>
