--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     </p>
                 </div>
                 <div class="tip">
-                    <p class="emoji">️🥸</p>
+                    <p class="emoji">🕵️‍♂️</p>
                     <p class="tip-content">Use Stealth or Incognito Mode (or Even Tor) </p>
                 </div>
                 <div class="tip">
@@ -364,7 +364,7 @@
                     </p>
                 </div>
                 <div class="tip">
-                    <p class="emoji">️🥸</p>
+                    <p class="emoji">️🪤</p>
                     <p class="tip-content">Finally, beware of Daft Surveys
 
                         (Maybe knowing which Power Ranger you are is not worth it after all)
@@ -372,6 +372,8 @@
                 </div>
 
             </div>
+
+            <a id="back-up" href="#hero">Go back up 🔝</a>
         </section>
     </main>
 
