--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     </p>
                 </div>
                 <div class="tip">
-                    <p class="emoji">️🪤</p>
+                    <p class="emoji">️☑️</p>
                     <p class="tip-content">Finally, beware of Daft Surveys
 
                         (Maybe knowing which Power Ranger you are is not worth it after all)
