--- a/index.html
+++ b/index.html
@@ -401,6 +401,11 @@
             </p>
         </div>
     </footer>
+    <style>
+        body {
+            overflow: hidden;
+        }
+    </style>
 
     <script src="https://d3js.org/d3.v6.min.js"></script>
 
